[package]
name = "russh-sftp"
version = "3.0.0"
edition = "2021"
description = "SFTP subsystem supported server and client for Russh"
readme = "README.md"
repository = "https://github.com/AspectUnk/russh-sftp"
license = "Apache-2.0"
keywords = ["russh", "sftp", "ssh2", "server", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "rt",
    "sync",
    "time",
    "macros",
] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.9", features = ["serde"] }
async-trait = { version = "0.1", optional = true }
russh = { git = "https://github.com/mjc/russh.git", branch = "mjc/own-inbound-channel-payloads", optional = true, default-features = false, features = ["aws-lc-rs", "flate2"] }

thiserror = "2.0"
chrono = "0.4"
bytes = "1.10"
dashmap = "6"
log = "0.4"
futures = "0.3"
rand = "0.10.1"

[dev-dependencies]
env_logger = "0.11"
anyhow = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }
iai-callgrind = "0.16.1"

[features]
async-trait = ["dep:async-trait"]
russh-channel-data = ["dep:russh"]

[[example]]
name = "client"
required-features = ["russh-channel-data"]

[[example]]
name = "server"
required-features = ["russh-channel-data"]

[[bench]]
name = "upload_benchmark"
harness = false
required-features = ["russh-channel-data"]

[[bench]]
name = "packet_iai"
harness = false
